--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -134,6 +134,15 @@
 
     document.querySelector('input[name="Entry Proof"]').addEventListener("input", updateOPG);
     document.querySelector('select[name="Gallons"]').addEventListener("change", updateOPG);
+    // ==== RC-G Auto Changes ====
+    // Auto-set RC-G based on Gallons selection
+  document.querySelector('select[name="Gallons"]').addEventListener("change", () => {
+  const gallons = document.querySelector('select[name="Gallons"]').value;
+  const rcgField = document.querySelector('select[name="RC-G"]');
+
+  if (gallons === "15") rcgField.value = "15.0";
+  if (gallons === "53") rcgField.value = "53.0";
+});
 
     // ===== AUTO-GENERATE LOT ID BASED ON TODAY =====
 function generateLotID() {
