--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -1,3 +1,4 @@
+here is my code I added the last part in but it's not doing anything
 <!DOCTYPE html>
 <html>
 <head>
@@ -104,10 +105,10 @@
 
     <label>RC-G</label>
     <select name="RC-G">
-      <option value="">-- Select RC-G --</option>
-      <option value="15.0">15.0</option>
-      <option value="53.0">53.0</option>
-    </select>
+  <  option value="">-- Select RC-G --</option>
+    <option value="15.0">15.0</option>
+    <option value="53.0">53.0</option>
+  </select>
 
     <label>OPG (Auto Calculated)</label>
     <input type="number" name="OPG" placeholder="Auto" disabled />
@@ -124,14 +125,13 @@
 
   <script>
     const API_URL = "https://api.sheetbest.com/sheets/62950420-e9fb-4453-a651-96bf566f2907";
-    const API_KEY = "FEwi_w0c$O3rQqyl9RDFq7-BgJM27lUuD-8!ZKscXp1dT1c37PU@8sQkZtWQwCVp";
-
-    // ===== AUTO-SET RC-G WHEN GALLONS CHANGES =====
+    // Auto-set RC-G based on Gallons selection
     document.querySelector('select[name="Gallons"]').addEventListener("change", () => {
-      const gallons = document.querySelector('select[name="Gallons"]').value;
-      const rcgField = document.querySelector('select[name="RC-G"]');
-      if (gallons === "15") rcgField.value = "15.0";
-      if (gallons === "53") rcgField.value = "53.0";
+    const gallons = document.querySelector('select[name="Gallons"]').value;
+    const rcgField = document.querySelector('select[name="RC-G"]');
+
+    if (gallons === "15") rcgField.value = "15.0";
+    if (gallons === "53") rcgField.value = "53.0";
     });
 
     // ========== LIVE OPG CALCULATION ==========
@@ -147,78 +147,77 @@
 
     document.querySelector('input[name="Entry Proof"]').addEventListener("input", updateOPG);
     document.querySelector('select[name="Gallons"]').addEventListener("change", updateOPG);
+    
 
-    // ===== AUTO-GENERATE LOT ID =====
-    function generateLotID() {
-      const today = new Date();
-      const year = String(today.getFullYear()).slice(-2);
-      const monthIndex = today.getMonth();
-      const day = String(today.getDate()).padStart(2, "0");
+    // ===== AUTO-GENERATE LOT ID BASED ON TODAY =====
+  function generateLotID() {
+  const today = new Date();
 
-      const monthLetters = ["A","B","C","D","E","F","G","H","I","J","K","L"];
-      const monthLetter = monthLetters[monthIndex];
+  const year = String(today.getFullYear()).slice(-2); // last 2 digits
+  const monthIndex = today.getMonth();                // 0–11
+  const day = String(today.getDate()).padStart(2, "0");
 
-      const lotID = `${year}${monthLetter}${day}`;
-      document.querySelector('input[name="Lot ID"]').value = lotID;
-    }
-    generateLotID();
+  // Cooperage month letters
+  const monthLetters = ["A","B","C","D","E","F","G","H","I","J","K","L"];
+  const monthLetter = monthLetters[monthIndex];
+
+  const lotID = `${year}${monthLetter}${day}`;
+
+  document.querySelector('input[name="Lot ID"]').value = lotID;
+}
+
+generateLotID();
 
     // ===== AUTO-FILL NEXT BARREL NUMBER =====
     async function loadNextBarrelNumber() {
-      try {
-        const response = await fetch(API_URL, {
-          method: "GET",
-          headers: {
-            "Accept": "application/json",
-            "X-Api-Key": API_KEY
-          }
-        });
-
-        const rows = await response.json();
-
-        if (!Array.isArray(rows) || rows.length === 0) return;
-
-        let lastNum = null;
-
-        // find last valid barrel number
-        for (let i = rows.length - 1; i >= 0; i--) {
-          let val = rows[i]["Barrel No."];
-          let num = parseInt(val);
-          if (!isNaN(num)) {
-            lastNum = num;
-            break;
-          }
-        }
-
-        if (lastNum !== null) {
-          document.querySelector('input[name="Barrel No."]').value = lastNum + 1;
-        }
-
-      } catch (err) {
-        console.error("Error loading next barrel number:", err);
+    try {
+      const response = await fetch(API_URL, {
+        method: "GET",
+        headers: {
+        "Accept": "application/json",
+        "X-Api-Key": API_KEY
       }
+    });
+
+    const rows = await response.json();
+
+    if (!Array.isArray(rows) || rows.length === 0) return;
+
+    // Get last non-empty Barrel No.
+    let last = rows[rows.length - 1]["Barrel No."];
+
+    // Convert to number
+    let lastNum = parseInt(last);
+
+    if (!isNaN(lastNum)) {
+      document.querySelector('input[name="Barrel No."]').value = lastNum + 1;
     }
 
-    loadNextBarrelNumber();
+  } catch (err) {
+    console.error("Error loading next barrel number:", err);
+  }
+}
 
-    // ========== SUBMIT FORM ==========
+loadNextBarrelNumber();
+
+
+    // ========== FORM SUBMISSION ==========
     document.getElementById("barrelForm").addEventListener("submit", async function(e) {
       e.preventDefault();
 
       const form = new FormData(e.target);
       const data = Object.fromEntries(form);
 
+      // force-send the disabled fields too
       data["OPG"] = document.querySelector('input[name="OPG"]').value;
       data["Lot ID"] = document.querySelector('input[name="Lot ID"]').value;
-      data["RC-G"] = document.querySelector('select[name="RC-G"]').value;
 
       try {
         const response = await fetch(API_URL, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "Accept": "application/json",
-            "X-Api-Key": API_KEY
+            "Accept": "application/json"
           },
           body: JSON.stringify(data)
         });
