--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -34,14 +34,30 @@
       color: #cbd5e1;
     }
 
+    /* 🔥 FIX: Right padding + consistent sizing across all fields */
     input, select, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 10px 14px;         /* added right padding */
       margin-top: 5px;
       border-radius: 6px;
       border: 1px solid #475569;
       background: #0f172a;
       color: white;
+      box-sizing: border-box;     /* prevents dropdown shrink */
+    }
+
+    /* 🔥 FIX: Select dropdown arrow + padding so it doesn’t overlap text */
+    select {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+
+      background-image: url("data:image/svg+xml;utf8,<svg fill='%23cbd5e1' height='20' viewBox='0 0 24 24' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+      background-repeat: no-repeat;
+      background-position: right 10px center;
+      background-size: 18px;
+
+      padding-right: 40px;       /* lets text breathe before the arrow */
     }
 
     button {
@@ -59,8 +75,9 @@
 
     button:hover {
       background: #7dd3fc;
-    }    
-  </style>
+    }
+</style>
+
 </head>
 
 <body>
