--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -94,6 +94,7 @@
 
     <label>Spirit Type</label>
     <select name="Spirit Type" required>
+      <option value="" disabled selected>Please select</option>
       <option value="Tennessee Whiskey">Tennessee Whiskey</option>
       <option value="Wheated Whiskey">Wheated Whiskey</option>
       <option value="Rum">Rum</option>
