--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -110,6 +110,7 @@
 
     <label>Gallons</label>
     <select name="Gallons" required>
+      <option value="" disabled selected>Please select</option>
       <option value="15">15 Gallon</option>
       <option value="53">53 Gallon</option>
     </select>
@@ -122,7 +123,7 @@
 
     <label>RC-G</label>
     <select name="RC-G">
-  <  option value="">-- Select RC-G --</option>
+      <option value="" disabled selected>Please select</option>
     <option value="15.0">15.0</option>
     <option value="53.0">53.0</option>
   </select>
