--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>New Barrel Entry (TEST)</title>
+  <title>New Barrel Entry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
