--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -118,7 +118,7 @@
     <label>Lot ID (Auto – leave blank)</label>
     <input type="text" name="Lot ID" placeholder="Auto" disabled />
 
-    <label>Barrel</label>
+    <label>Barrel Type</label>
     <select id="barrelType" name="barrelType">
     <option value="" disabled selected>Please select</option>
     <option value="15 Gallon New Char #3">15 Gallon New Char #3</option>
