--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -223,38 +223,54 @@ async function loadNextBarrelNumber() {
 }
 
 loadNextBarrelNumber();
-// ========== FORM SUBMISSION ==========
+// ========== FORM SUBMISSION (SheetBest + Google Script) ==========
 document.getElementById("barrelForm").addEventListener("submit", async function(e) {
   e.preventDefault();
 
   const form = new FormData(e.target);
   const data = Object.fromEntries(form);
 
-  // force-send the disabled fields too
+  // Include disabled fields manually
   data["OPG"] = document.querySelector('input[name="OPG"]').value;
   data["Lot ID"] = document.querySelector('input[name="Lot ID"]').value;
 
-  try {
-    const response = await fetch(API_URL, {
+  // 1️⃣ POST to SheetBest (creates the row)
+  let sheetResponse = await fetch(API_URL, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      "Accept": "application/json"
+    },
+    body: JSON.stringify(data)
+  });
+
+  if (!sheetResponse.ok) {
+    alert("Error saving to SheetBest.");
+    return;
+  }
+
+  // 2️⃣ POST to Google Apps Script (creates doc + updates sheet)
+  let scriptResponse = await fetch(
+    "https://script.google.com/macros/s/AKfycbwspxjukuwaMdj5_1uJqALX0asGnKEB4kv2voEqKqtSDEnX5cTr3mqcJfPTRYYuEQudfw/exec",
+    {
       method: "POST",
       headers: {
-        "Content-Type": "application/json",
-        "Accept": "application/json"
+        "Content-Type": "application/json"
       },
       body: JSON.stringify(data)
-    });
-
-    if (response.ok) {
-      alert("Barrel successfully recorded!");
-      location.reload();
-    } else {
-      alert("Error submitting to Sheet.best.");
     }
+  );
 
-  } catch (err) {
-    alert("Request Failed: " + err);
+  let scriptResult = await scriptResponse.json();
+
+  if (scriptResult.status === "SUCCESS") {
+    alert("Barrel successfully recorded and Doc created!");
+    location.reload();
+  } else {
+    alert("Barrel saved, but doc creation failed.");
   }
 });
+
   </script>
 
 </body>
