--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -128,7 +128,7 @@
     <input type="text" name="Lot ID" placeholder="Auto" disabled />
 
     <label>Barrel Type</label>
-    <select id="barrelType" name="barrelType">
+    <select name="barrelType">
     <option value="" disabled selected>Please select</option>
     <option value="15 Gallon New Char #3">15 Gallon New Char #3</option>
     <option value="15 Gallon Used Char #3">15 Gallon Used Char #3</option>
