--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -128,15 +128,14 @@
     <input type="text" name="Lot ID" placeholder="Auto" disabled />
 
     <label>Barrel Type</label>
-    <select name="barrelType">
+    <select name="Barrel Type" required>
     <option value="" disabled selected>Please select</option>
     <option value="15 Gallon New Char #3">15 Gallon New Char #3</option>
     <option value="15 Gallon Used Char #3">15 Gallon Used Char #3</option>
     <option value="53 Gallon New Char #3">53 Gallon New Char #3</option>
     <option value="53 Gallon Used Char #3">53 Gallon Used Char #3</option>
     </select>
-
-
+    
     <label>RC-G</label>
     <select name="RC-G">
       <option value="" disabled selected>Please select</option>
