--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -231,6 +231,23 @@
       <img src="websiteLogoGlassWhiteTrans.png" class="header-logo" alt="797 Distillery Logo">
     </div>
     <!-- END HEADER BLOCK -->
+    <!-- Nav Block -->
+<div class="dashboard-actions">
+  <a
+    href="https://darren-chaney.github.io/797-dashboard/barrel-entry-test.html"
+    class="action-btn"
+    target="_blank"
+  >
+    ➕ New Barrel Entry
+  </a>
+
+  <a
+    href="https://darren-chaney.github.io/797-dashboard/dashboard.html"
+    class="action-btn secondary"
+  >
+    🧪 Fermentation Dashboard
+  </a>
+</div>
 
     <!-- ⭐ Stats -->
     <div class="stats-grid">
