--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -209,6 +209,34 @@
         width: 34px;
       }
     }
+    .dashboard-actions {
+  display: flex;
+  gap: 0.75rem;
+  margin: 0.75rem 0 1.25rem;
+  flex-wrap: wrap;
+}
+
+.action-btn {
+  background: #020617;
+  color: #e5e7eb;
+  border: 1px solid #1f2937;
+  border-radius: 999px;
+  padding: 0.45rem 0.9rem;
+  font-size: 0.8rem;
+  text-decoration: none;
+  transition: all 0.15s ease;
+}
+
+.action-btn:hover {
+  background: #0f172a;
+  border-color: #38bdf8;
+  color: #ffffff;
+}
+
+.action-btn.secondary {
+  opacity: 0.9;
+}
+
   </style>
 </head>
 
