--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -6,6 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    .header-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.header-logo {
+  width: 75px;        /* 👈 this is the key */
+  height: auto;
+  opacity: 0.95;
+}
+
     body {
       background: #0f172a;
       color: #e5e7eb;
