--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -109,38 +109,18 @@
      ============================================ -->
 <div class="header-row">
   <div>
-    <h1>797 Distillery Barrel Dashboard</h1>
+    <h1>Barrel Entry Form</h1>
     <div class="subheading">
-      Barrel Entry Form
+      Log a new barrel into inventory
     </div>
   </div>
 
-  <!-- Right-side logo (click = home) -->
   <a href="https://darren-chaney.github.io/797-dashboard/index.html">
     <img
       src="websiteLogoGlassWhiteTrans.png"
       class="header-logo"
       alt="797 Distillery Logo"
     >
-  </a>
-</div>
-<!-- END HEADER BLOCK -->
-
-<!-- Nav Block -->
-<div class="dashboard-actions">
-  <a
-    href="https://darren-chaney.github.io/797-dashboard/barrel-entry-test.html"
-    class="action-btn"
-    target="_blank"
-  >
-    ➕ New Barrel Entry
-  </a>
-
-  <a
-    href="https://darren-chaney.github.io/797-dashboard/dashboard.html"
-    class="action-btn secondary"
-  >
-    🧪 Fermentation Dashboard
   </a>
 </div>
 
