--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -107,7 +107,8 @@
   <!-- ============================================
      HEADER — TITLE + LOGO INLINE
      ============================================ -->
-<div class="header-row">
+  <div class="container">
+  <div class="header-row">
   <div>
     <h1>Barrel Entry Form</h1>
     <div class="subheading">
@@ -122,6 +123,7 @@
       alt="797 Distillery Logo"
     >
   </a>
+</div>
 </div>
 
   <form id="barrelForm">
