--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1.5rem 1rem 3rem;
+}
+
     .header-row {
   display: flex;
   justify-content: space-between;
