--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>New Barrel Entry</title>
+  <title>797 Distillery - New Barrel Entry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -116,7 +116,7 @@
   <div class="container">
   <div class="header-row">
   <div>
-    <h1>Barrel Entry Form</h1>
+    <h1>797 Distillery - New Barrel Entry Form</h1>
     <div class="subheading">
       Log a new barrel into inventory
     </div>
