--- a/print-label.html
+++ b/print-label.html
@@ -282,8 +282,7 @@
      * 1) Put your Barrel Storage CSV URL here
      *    (the same published CSV you already use elsewhere)
      *********************************************************/
-    const BARREL_STORAGE_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv
-";
+    const BARREL_STORAGE_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
     /*********************************************************
      * SHARED HEADER LOADING
