--- a/print-label.html
+++ b/print-label.html
@@ -116,6 +116,12 @@ button:disabled{opacity:.5;cursor:not-allowed}
   width:150px;
   height:150px;
 }
+.crest-img {
+  width: 260px;      /* tuned to match your printed label */
+  height: auto;
+  display: block;
+  margin: 6px auto 2px auto;
+}
 
 /* PRINT */
 @page{size:6in 4in;margin:0}
@@ -172,7 +178,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   <div class="lbl-rule"></div>
 
   <div class="lbl-crest">
-    <img src="websiteLogoGlassWhiteTrans.png" alt="797 Distillery">
+    <img src="websiteLogoGlass.png" alt="797 Distillery Crest" class="crest-img">
   </div>
 
   <div class="lbl-rule"></div>
