--- a/print-label.html
+++ b/print-label.html
@@ -117,14 +117,13 @@ button:disabled{opacity:.5;cursor:not-allowed}
   height:150px;
 }
 .crest-img {
-  height: 180px;          /* CONTROL BY HEIGHT */
-  width: auto;            /* LET WIDTH FLOAT */
-  max-width: 90%;         /* SAFETY */
+  height: 240px;   /* ⬅ increase size */
+  width: auto;
+  max-width: 95%;
   display: block;
-  margin: 8px auto 6px auto;
-  object-fit: contain;    /* PREVENT DISTORTION */
+  margin: 6px auto 4px auto;
+  object-fit: contain;
 }
-
 /* PRINT */
 @page{size:6in 4in;margin:0}
 @media print{
